# dprint

./: Cargo.toml  Makefile
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/formatting/: print_items.rs
crates/dprint/src/commands/lsp/: config.rs
crates/dprint/src/configuration/: mod.rs  resolve_main_config_path.rs
