[workspace]
members = [
  "crates/core",
  "crates/development",
  "crates/test-process-plugin",
  "crates/dprint",
]
# excluded because this needs to be compiled as wasm to work
exclude = [
  "crates/test-plugin",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[patch.crates-io]
unicode-width = { git = "https://github.com/waltarix/unicode-width", tag = "v0.1.10-custom-r2" }
