[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/core-macros",
  "crates/development",
  "crates/dprint",
  "crates/test-process-plugin",
]
# excluded because this needs to be compiled as wasm to work
exclude = [
  "crates/test-plugin",
]

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[patch.crates-io]
unicode-width = { git = "https://github.com/waltarix/unicode-width", tag = "v0.1.13-custom" }
